tools/profiler/core/ProfiledThreadData.cpp
@@ -16,13 +16,6 @@
 #  include <pthread.h>
 #endif
 
-#ifdef XP_WIN
-#  include <process.h>
-#  define getpid _getpid
-#else
-#  include <unistd.h>  // for getpid()
-#endif
-
 ProfiledThreadData::ProfiledThreadData(ThreadInfo* aThreadInfo,
                                        nsIEventTarget* aEventTarget,
                                        bool aIncludeResponsiveness)
@@ -223,7 +216,8 @@ void StreamSamplesAndMarkers(const char* aName, int aThreadId,
   }
 
   aWriter.IntProperty("tid", static_cast<int64_t>(aThreadId));
-  aWriter.IntProperty("pid", static_cast<int64_t>(getpid()));
+  aWriter.IntProperty("pid",
+                      static_cast<int64_t>(profiler_current_process_id()));
 
   if (aRegisterTime) {
     aWriter.DoubleProperty(
